Added USL string generator.